5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1764_762.log
== TEST (2019-06-18 16:00:56) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = str(dia + '-' + mes_abrev + '-' + ano)
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    nova_data = str(dia + '-' + mes_abrev + '-' + ano)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:01:14) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data ("dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = str(dia + '-' + mes_abrev + '-' + ano)
print(nova_data)
-- ERROR:
File "XXXX", line 3
    data = input("Informe a data ("dd/mm/aaaa: ")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:01:16) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data ("dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = str(dia + '-' + mes_abrev + '-' + ano)
print(nova_data)
-- ERROR:
File "XXXX", line 3
    data = input("Informe a data ("dd/mm/aaaa: ")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:02:03) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data ("dd/mm/aaaa:")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = str(dia + '-' + mes_abrev + '-' + ano)
print(nova_data)
-- ERROR:
File "XXXX", line 3
    data = input("Informe a data ("dd/mm/aaaa:")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:02:19) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = str(dia + '-' + mes_abrev + '-' + ano)
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    nova_data = str(dia + '-' + mes_abrev + '-' + ano)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:03:19) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = str(int(dia + '-' + mes_abrev + '-' + ano))
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    nova_data = str(int(dia + '-' + mes_abrev + '-' + ano))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:03:46) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = int(str(dia + '-' + mes_abrev + '-' + ano))
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    nova_data = int(str(dia + '-' + mes_abrev + '-' + ano))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:04:35) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = int(str(dia+'-'+mes_abrev+'-'+ano))
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    nova_data = int(str(dia+'-'+mes_abrev+'-'+ano))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-18 16:04:44) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = int(str(dia+'-'+mes_abrev+'-'+ano))
print(nova_data)
-- EXECUTION TIME:
0.647358
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 12, in <module>
    nova_data = int(str(dia+'-'+mes_abrev+'-'+ano))
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:04:51) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = int(str(dia+'-'+mes_abrev+'-'+ano))
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    nova_data = int(str(dia+'-'+mes_abrev+'-'+ano))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:04:52) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = int(str(dia+'-'+mes_abrev+'-'+ano))
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    nova_data = int(str(dia+'-'+mes_abrev+'-'+ano))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:05:56) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = str(dia) + '-' + mes_abrev + '-' + ano))
print(nova_data)
-- ERROR:
File "XXXX", line 12
    nova_data = str(dia) + '-' + mes_abrev + '-' + ano))
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:06:02) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = str(dia) + '-' + mes_abrev + '-' + ano)
print(nova_data)
-- ERROR:
File "XXXX", line 12
    nova_data = str(dia) + '-' + mes_abrev + '-' + ano)
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:06:09) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = str(dia) + '-' + mes_abrev + '-' + ano
print(nova_data)
-- OUTPUT:
26-Nov-1982
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-18 16:06:16) 
-- CODE:
# Teste
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini:fim]
nova_data = str(dia) + '-' + mes_abrev + '-' + ano
print(nova_data)
-- EXECUTION TIME:
0.639906
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26-Nov-1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7--1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22--2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:14:08) 
-- CODE:
# Teste
from numpy import *
					  
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
nova_data = str(dia) + ' ' + nome_meses + ' ' + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-18 16:14:17) 
-- CODE:
# Teste
from numpy import *
					  
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
nova_data = str(dia) + ' ' + nome_meses + ' ' + ano
print(nova_data)
-- EXECUTION TIME:
0.758159
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 12, in <module>
    nova_data = str(dia) + ' ' + nome_meses + ' ' + ano
TypeError: ufunc 'add' did not contain a loop with signature matching types dtype('<U9') dtype('<U9') dtype('<U9')

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:17:09) 
-- CODE:
# Teste
from numpy import *
					  
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (ddmmaaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
nova_data = str(dia) + ' ' + nome_meses + ' ' + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-18 16:17:27) 
-- CODE:
# Teste
from numpy import *
					  
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (ddmmaaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
nova_data = str(dia) + ' ' + nome_meses + ' ' + ano
print(nova_data)
-- EXECUTION TIME:
0.847201
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 12, in <module>
    nova_data = str(dia) + ' ' + nome_meses + ' ' + ano
TypeError: ufunc 'add' did not contain a loop with signature matching types dtype('<U9') dtype('<U9') dtype('<U9')

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:18:15) 
-- CODE:
# Teste
from numpy import *
					  
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (ddmmaaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
nova_data = str(dia) + nome_meses + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-18 16:18:25) 
-- CODE:
# Teste
from numpy import *
					  
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (ddmmaaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
#Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
nova_data = str(dia) + nome_meses + ano
print(nova_data)
-- EXECUTION TIME:
0.985725
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 12, in <module>
    nova_data = str(dia) + nome_meses + ano
TypeError: ufunc 'add' did not contain a loop with signature matching types dtype('<U9') dtype('<U9') dtype('<U9')

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:21:58) 
-- CODE:
# Teste
from numpy import *
					  
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (ddmmaaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Resultados
nova_data = str(dia) + nome_meses + ano
print(nova_data)
print("17 de janeiro de 1909")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:22:20) 
-- CODE:
print("17 de janeiro de 1909")
-- OUTPUT:
17 de janeiro de 1909
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-18 16:22:24) 
-- CODE:
print("17 de janeiro de 1909")
-- EXECUTION TIME:
1.00546
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
17 de janeiro de 1909
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
17 de janeiro de 1909
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
17 de janeiro de 1909
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:22:30) 
-- CODE:
print("17 de janeiro de 1909")
-- OUTPUT:
17 de janeiro de 1909
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-18 16:22:35) 
-- CODE:
print("17 de janeiro de 1909")
-- EXECUTION TIME:
0.589978
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
17 de janeiro de 1909
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
17 de janeiro de 1909
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
17 de janeiro de 1909
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:24:01) 
-- CODE:
# Teste
from numpy import *
					  
nome_meses = int(array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (ddmmaaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Resultados
nova_data = str(dia) + nome_meses + ano
print(nova_data)
print("17 de janeiro de 1909")
-- ERROR:
File "XXXX", line 5
    data = input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:24:17) 
-- CODE:
# Teste
from numpy import *
					  
nome_meses = int(array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data ddmmaaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Resultados
nova_data = str(dia) + nome_meses + ano
print(nova_data)
print("17 de janeiro de 1909")
-- ERROR:
File "XXXX", line 5
    data = input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:24:40) 
-- CODE:
# Teste
from numpy import *
					  
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (ddmmaaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Resultados
nova_data = str(dia) + nome_meses + ano
print(nova_data)
print("17 de janeiro de 1909")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-18 16:24:50) 
-- CODE:
# Teste
from numpy import *
					  
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (ddmmaaaa: ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Resultados
nova_data = str(dia) + nome_meses + ano
print(nova_data)
print("17 de janeiro de 1909")
-- EXECUTION TIME:
0.824103
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 10, in <module>
    nova_data = str(dia) + nome_meses + ano
TypeError: ufunc 'add' did not contain a loop with signature matching types dtype('<U9') dtype('<U9') dtype('<U9')

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
